# METIS-CORE

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.roles/: ROLE.md
.roles/parliament/: api-contract-auditor.md  parity-performance-reviewer.md  partition-correctness-steward.md
benches/: baseline.json  bench_main.rs
docs/: PRODUCTION_PLAN.md
src/: advanced.rs  api.rs  error.rs  lib.rs
src/coarsen/: hem.rs  mindegree.rs  mod.rs  shem.rs  twohop.rs
src/graph/: mod.rs
src/init/: grow.rs  mod.rs  multiconstraint.rs  random.rs
src/multilevel/: hierarchy.rs  mod.rs  pipeline.rs
src/refine/: boundary.rs  fm.rs  gain.rs  kway.rs  lp.rs  minconn.rs  mod.rs
tests/: contracts.rs  graph_files.rs  graph_ops.rs  metis_parity.rs  proptest_invariants.rs  public_api.rs  thread_safety.rs
tests/golden/: vt_seed42.json
verify/kani/: BOUNDS.md  README.md  UNSAFE.md  coarsen_harness.rs  csr_harness.rs  init_harness.rs  multilevel_harness.rs  refine_harness.rs
verify/prusti/: GAPS.md  README.md  postconditions.rs
